@@ -132,6 +132,7 @@ TARGET_LINK_LIBRARIES( guayadeque
         ${LIBTAG_LIBRARIES}
 	${LIBTAGEXTRAS_LIBRARIES}
         ${LIBDBUS_LIBRARIES}
+	${LIBMP4}
 	)
 
 INSTALL( TARGETS guayadeque
